[package]
name = "dump-cat"
version = "0.1.2"
authors = ["gfreezy <gfreezy@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[dependencies]
byteorder = "1.3.1"
failure = "0.1.5"
snap = "0.2"
time = "0.1.42"
bytes = "0.4.12"
structopt = "0.2.15"
evalexpr = "4.1.0"
log = "0.4.0"
env_logger = "0.6.1"
serde = { version = "1.0.90",  features = ["derive", "rc"] }
serde_json = "1.0.39"
crossbeam = "0.7.1"
derive_builder = "0.7.1"
